tests/macros/select/editor.stderr
error: option `editor` does not exist for kind `select`
 --> tests/macros/select/editor.rs:2:44
  |
2 |     let q = requestty::questions![Select { editor: todo!() }];
  |                                            ^^^^^^
