tests/macros/select/editor.rs
fn main() {
    let q = requestty::questions![Select { editor: todo!() }];
}
